# nbcodecarbon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
nbcodecarbon/: __init__.py  default_conf.py  description.yaml  main.js
