[tool.poetry]
name = "nbcodecarbon"
version = "0.1.0"
description = "Codecarbon extension for jupyter notebook"
authors = ["Nathan LAUGA"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
codecarbon = ">=2.1.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
Sphinx = ">=5.1.1"
pre-commit = ">=2.20.0"
interrogate = "^1.5.0"
black = "^22.10.0"
radon = "^5.1.0"
flake8 = "<5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
